<resources>
    <string name="app_name">Mojodat Lens</string>
    <string name="enter_the_number_barcode">Enter the number barcode</string>
    <string name="read_qr_code">Read Qr Code</string>
    <string name="search">Search</string>
    <string name="barcode">Barcode:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="asset_information">Asset Information:</string>
    <string name="no_data_found">No Data Found Yet!</string>
</resources>