<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/darkBack"
    android:orientation="vertical"
    tools:context=".view.assetslist.AssetsListFragment">

    <EditText
        android:id="@+id/assets_list_edit_text_barcode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_edit_text"
        android:drawableStart="@drawable/ic_baseline_qr_code"
        android:drawablePadding="10dp"
        android:drawableTint="@android:color/white"
        android:hint="@string/enter_the_number_barcode"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusForward="@+id/registration_edit_text_email"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/grey_500"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_activity_button_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_blue"
        android:elevation="10dp"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/darkBack"
        android:textSize="18sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_activity_button_read_qr_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_yellow"
        android:elevation="10dp"
        android:text="@string/read_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/darkBack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assets_list_text_view_asset_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/asset_information"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/assets_list_text_view_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/barcode"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assets_list_text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assets_list_text_view_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/assets_list_image_view_no_data"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/no_data_found"
        android:src="@drawable/ic_no_data"
        android:visibility="visible" />

    <TextView
        android:id="@+id/assets_list_text_view_no_data_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible" />


</LinearLayout>

